fix: webkit flicker

--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,8 @@ body {
   background-color: var(--clr-bg-800);
   font-family: lusitana;
   cursor: none;
-  
+  /* -webkit-perspective: 1000; */
+  -webkit-backface-visibility: hidden;
 }
 
 a {
